
next
          - add status column to performance map excel export
          - accept filter changes on body clicks too
          - support wildcards for ssi files
          - fix 'bad file descriptor' error when trying to log in subprocesses
          - fix using non-standard webserver ports with cookie authentication (#576)
          - Config Tool:
            - add list wizard to drop down
            - fix encodig when raw editing files (#572)
          - Panorama View:
            - reload dashboards if server was updated
            - add factor for speedometers
            - update wms provider list
            - fix background image offset not working properly
            - fix mixed up label offset x/y
          - Reports:
            - create debug information more easily
          - CLI
            - add new graph command to export graphs from cli
            - add new listservices command

2.06     Wed Mar 02 16:08:00 CET 2016
          - make custom variables from show_custom_vars clickable
          - add eventhandler search option
          - add core scheduling graph page
            - add fix_scheduling cli command
          - set default graph from _GRAPH_SOURCE custom variable
          - fix sending commands to all backends (#555)
          - fix vertical header in Minemap for recent firefox
          - fix graphite integration (#557)
          - add generic grapher replace setting 'graph_replace'
          - Panorama View:
            - add hide legend / graph only checkbox for pnp panel
            - add new appearance type 'label only'
            - add export/import to files including images
            - add emoji icon set
            - fix sending reschedule commands
            - fix not triggering upload popup
          - Reports:
            - keep reports during updates (#546)
          - Config Tool:
            - show message if unsaved changes would be lost
            - fix user password change (marcantoinedupre)
