@@ -1936,6 +1936,8 @@ ex.:
     post_obj_save_cmd         = .../hook.sh
     git_base_dir              = /etc/naemon/conf.d/custom/
     edit_files                = some/extra/files/to.edit
+    extra_custom_var_host     = _WORKER
+    extra_custom_var_service  = _SNMP_COMMUNITY, _OTHER_CUSTOM_VARIABLE
   </Component>
 
 
@@ -1976,6 +1978,15 @@ Specify some extra files which can then be edited by the Thruk configtool
 text editor. Can be used multiple times. When used with a directory, all
 files below can be edited.
 
+=== extra_custom_var_host
+Extra custom variable attribute for hosts which will be available in the dropdown
+list when editing a host. Can be used multiple time and accepts comma separated
+lists.
+
+=== extra_custom_var_service
+Extra custom variable attribute for services which will be available in the dropdown
+list when editing a service. Can be used multiple time and accepts comma separated
+lists.
 
 
 
