@@ -300,6 +300,12 @@ sub _process_json_page {
         my $for  = $c->req->parameters->{'obj'};
         my $attr = $c->{'obj_db'}->get_default_keys($for, { no_alias => 1 });
         push @{$attr}, 'customvariable';
+        if($c->stash->{conf_config}->{'extra_custom_var_'.$for}) {
+            for my $extra (@{Thruk::Utils::list($c->stash->{conf_config}->{'extra_custom_var_'.$for})}) {
+                my @extras = split/\s*,\s*/mx, $extra;
+                push @{$attr}, @extras;
+            }
+        }
         my $json = [{ 'name' => $type.'s',
                       'data' => [ sort @{Thruk::Utils::array_uniq($attr)} ],
                    }];
