@@ -710,6 +710,9 @@ cookie_auth_session_cache_timeout = 5
     #git_base_dir       =
 
     #edit_files         =
+
+    #extra_custom_var_host    = _WORKER
+    #extra_custom_var_service = _WORKER, _SNMP_COMMUNITY
 </Component>
 
 ######################################
